--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,13 @@
 EKS_cluster/.terraform
 EKS_cluster/k8s-argo-manifests
 EKS_cluster/modules/k8s-config
+EC2_autoscaling/.terraform
 
 ###### files ######
 EKS_cluster/.terraform.lock.hcl
 EKS_cluster/terraform.tfstate.backup
 EKS_cluster/terraform.tfstate
+
+EC2_autoscaling/.terraform.lock.hcl
+EC2_autoscaling/terraform.tfstate.backup
+EC2_autoscaling/terraform.tfstate
